@@ -5,4 +5,5 @@
 *.obj
 *.res
 players.h
+MANIFEST
 README.html
